# jpeg_gpu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  generate_raw_image.cpp  main.cpp
include/: huffman_code.h  image.h  image.hpp  jpeg_encode.h
src/: generate_image.cpp  generate_raw_image.cpp  huffman_code.c  image.cpp  jpeg_encode.c  jpeg_encode.cpp  main.cpp
tests/: tests.cpp
